# sire

./: .gitignore  Cargo.toml  README.md  roadmap.md  run_tests.sh
.github/actions-rs/: grcov.yml
.github/workflows/: release.yml  rust.yml
src/: lib.rs  main.rs  manifest.rs
src/test_data/manifest_files/: complete_sample.yml  missing_project_name.yml  simple_manifest.yml
tests/: app.rs
tests/test_project/: settings.conf
tests/test_project/test_src/: config.yml
tests/test_template/: config.yml  settings.conf
