[package]
version = "0.0.3-alpha"
name = "sire"
description = "command line tool for generating source code projects from user defined templates"
authors = ["Adam Baker", "Kevin Phillips <thefriendlycoder@gmail.com>", "Mike McLennan", "Prem Raheja", "Zack Troop"]

# supports up to 5 values
keywords = ["template", "project", "generator", "code"]
# Slug reference list: https://crates.io/category_slugs
# supports up to 5 values
categories = ["command-line-utilities", "config", "development-tools::build-utils", "template-engine"]
readme = "./README.md"
homepage = "https://github.com/rusty-devs/sire"
repository = "https://github.com/rusty-devs/sire"
# Supported license identifiers: https://spdx.org/licenses/
license = "Apache-2.0"
edition = "2021"

# Exclude CI scripts, unit tests and intermediate build folders from our crate
exclude = [".github/", "target/", "coverage", "roadmap.md", ".gitignore", "tests/", "lcov.info"]

[dependencies]
tera = "1.15.0"
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
walkdir = "2.3.2"

[dev-dependencies]
assert_cmd = "2"